# bili

./: .gitignore  Cargo.toml  Cross.toml  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
src/: app.rs  cli.rs  download.rs  local.rs  main.rs  user.rs
