[package]
name = "bili"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilirust = { git = "https://github.com/mosttt/bilirust.git", branch = "master" }
clap = { version = "4.0.10", features = ["derive"] }
dialoguer = "0.10.2"
console = "0.15.5"
indicatif = "0.17.3"
anyhow = "1.0.66"
tokio = { version = "1.21.2", features = [
    "macros",
    "io-util",
    "rt-multi-thread",
] }
tokio-util = { version = "0.7.4", features = ["io"] }
regex = "1.7.0"
reqwest = { version = "0.11.12", features = ["stream"] }
dirs = "4.0.0"
image = "0.23"
lazy_static = "1.4.0"
opener = "0.5.0"
qrcode = "0.12.0"
qr2term = "0.3.1"
serde_json = "1.0.87"
futures = "0.3.25"
once_cell = "1.16.0"
async_once = "0.2.6"
itertools = "0.10.5"
sea-orm = { version = "0.10.2", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
], default-features = false }
async-recursion = "1.0.2"
rsmpeg = { optional = true, version = "0.12" }


[features]
default = []
ffmpeg_api = ["dep:rsmpeg"]

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

